menambahkan kata mereka

--- a/public/about.html
+++ b/public/about.html
@@ -237,7 +237,7 @@
 
    <section class="reviews">
 
-      <h1 class="heading"> our students review </h1>
+      <h1 class="heading"> Apa kata mereka </h1>
 
       <div class="swiper reviews-slider">
 
@@ -247,8 +247,8 @@
                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim animi atque numquam harum libero nemo,
                   eligendi laboriosam beatae quo iure corrupti, neque rerum possimus non nisi quia! Cumque, tempora sit.
                </p>
-               <img src="../images/pic-1.png" alt="">
-               <h3>john deo</h3>
+               <img src="../images/katameraka1.jpg" alt="">
+               <h3>Ir.indra gandhi</h3>
                <div class="stars">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
@@ -262,8 +262,8 @@
                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim animi atque numquam harum libero nemo,
                   eligendi laboriosam beatae quo iure corrupti, neque rerum possimus non nisi quia! Cumque, tempora sit.
                </p>
-               <img src="../images/pic-2.png" alt="">
-               <h3>john deo</h3>
+               <img src="../images/kattameraka2.jpg" alt="">
+               <h3>Dr.Dr.Ir.Mora Devent</h3>
                <div class="stars">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
@@ -277,8 +277,8 @@
                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim animi atque numquam harum libero nemo,
                   eligendi laboriosam beatae quo iure corrupti, neque rerum possimus non nisi quia! Cumque, tempora sit.
                </p>
-               <img src="../images/pic-3.png" alt="">
-               <h3>john deo</h3>
+               <img src="../images/katatmeraka3.jpg" alt="">
+               <h3>Ir.H.Brian puttra</h3>
                <div class="stars">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
