--- a/public/cisco.html
+++ b/public/cisco.html
@@ -87,14 +87,14 @@
     <!-- contact section starts  -->
 
     <section class="contact">
-
+        <p style="text-align: center; color: red; font-size: 20px;">*DISARANKAN MENGGUNAKAN CISCO VERSI > 7.2* </p>
         <h1 class="heading"> Pilih Tipe </h1>
 
         <div class="icons-container">
 
-            <div class="icons">
+            <div class="icons" style="border-radius: 20px;">
                 <div class="gambar">
-                    <img src="../images/topologi.png" alt="" style="width: 200px;">
+                    <img src="../images/topologi.png" alt="" style="width: 220px; border-radius: 20px;">
                 </div>
                 <h3>1 ROUTER </h3>
                 <h3>1 SWITCH</h3>
@@ -103,9 +103,9 @@
                         style="padding: 10px; background-color: #0eb582; color: white; margin-top: 5px;">Buka</button></a>
             </div>
 
-            <div class="icons">
+            <div class="icons" style="border-radius: 20px;">
                 <div class="gambar">
-                    <img src="../images/topologi4.png" alt="" style="width: 200px; height: 180px;">
+                    <img src="../images/topologi4.png" alt="" style="width: 220px; height: 180px; border-radius: 20px;">
                 </div>
                 <h3>2 ROUTER</h3>
                 <h3>4 SWITCH</h3>
@@ -114,9 +114,9 @@
                         style="padding: 10px; background-color: #0eb582; color: white; margin-top: 5px;">Buka</button></a>
             </div>
 
-            <div class="icons">
+            <div class="icons" style="border-radius: 20px;">
                 <div class="gambar">
-                    <img src="../images/topologi5.png" alt="" style="width: 200px; height: 180px;">
+                    <img src="../images/topologi5.png" alt="" style="width: 220px; height: 180px; border-radius: 20px;">
                 </div>
                 <h3>3 ROUTER </h3>
                 <h3>6 SWITCH</h3>
@@ -124,26 +124,31 @@
                 <a href="../public/3router.html"><button type="button"
                         style="padding: 10px; background-color: #0eb582; color: white; margin-top: 5px;">Buka</button></a>
             </div>
-            <div class="icons">
+            <div class="icons" style="border-radius: 20px;">
                 <div class="gambar">
-                    <img src="../images/vlan1.png" alt="" style="width: 200px; height: 180px;">
+                    <img src="../images/vlan1.png" alt="" style="width: 220px; height: 180px; border-radius: 20px;">
                 </div>
                 <h3>VLAN </h3>
                 <h3>1 SWITCH</h3>
                 <a href="../public/vlan1.html"><button type="button"
                         style="padding: 10px; background-color: #0eb582; color: white; margin-top: 5px;">Buka</button></a>
             </div>
-            <div class="icons">
+            <div class="icons" style="border-radius: 20px;">
                 <div class="gambar">
-                    <img src="../images/topologi5.png" alt="" style="width: 200px; height: 180px;">
+                    <img src="../images/serverDHCP.png" alt=""
+                        style="width: 220px; height: 180px; border-radius: 20px;">
                 </div>
-                <h3>3 ROUTER </h3>
-                <h3>6 SWITCH</h3>
-                <h3>12 PC</h3>
+                <h3>1 SERVER </h3>
+                <h3>1 SWITCH</h3>
+                <h3>3 PC</h3>
                 <a href="../public/3router.h"><button type="button"
                         style="padding: 10px; background-color: #0eb582; color: white; margin-top: 5px;">Buka</button></a>
             </div>
         </div>
+        <marquee direction="left"
+            style="font-size: 20px; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
+            HARUS SEMANGAT BROO, JANGAN LEMES
+        </marquee>
     </section>
 
     <!-- contact section ends -->
