--- a/public/vlan1.html
+++ b/public/vlan1.html
@@ -158,7 +158,7 @@
             </p>
 
             <p
-                style="font-family: Georgia, 'Times New Roman', Times, serif; background-color: grey; color: white;  padding: 10px; border-radius: 5px;">
+                style="font-family: Georgia, 'Times New Roman', Times, serif; background-color: #f9f9f9;   padding: 10px; border-radius: 5px;">
                 SW1(config)#vlan 10 <br>
                 SW1(config-vlan)#name kelompok1 <br>
                 SW1(config-vlan)#exit <br>
@@ -177,7 +177,7 @@
             </p>
 
             <p
-                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: grey; color: white; padding: 10px; border-radius: 5px;">
+                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: #f9f9f9;  padding: 10px; border-radius: 5px;">
                 VLAN Name Status Ports <br>
                 ---- -------------------------------- ---------<br>
                 1 default active Fa0/1, Fa0/2, Fa0/3, Fa0/4 <br>
@@ -214,7 +214,7 @@
             </ol>
             </p>
             <p
-                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: grey; color: white; padding: 10px; border-radius: 5px;">
+                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: #f9f9f9; padding: 10px; border-radius: 5px;">
                 SW1(config)#int range f0/1-3 <br>
                 SW1(config-if-range)#switchport mode access <br>
                 SW1(config-if-range)#switchport access vlan 10 <br>
@@ -230,7 +230,7 @@
             </ol>
             </p>
             <p
-                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: grey; color: white; padding: 10px; border-radius: 5px;">
+                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: #f9f9f9; padding: 10px; border-radius: 5px;">
                 SW1(config)#int range f0/4-6 <br>
                 SW1(config-if-range)#switchport mode access <br>
                 SW1(config-if-range)#switchport access vlan 20 <br>
@@ -246,7 +246,7 @@
             </p>
 
             <p
-                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: grey; color: white; padding: 10px; border-radius: 5px;">
+                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: #f9f9f9; padding: 10px; border-radius: 5px;">
                 VLAN Name Status Ports <br>
                 ---- -------------------------------- --------- <br>
                 1 default active Fa0/7, Fa0/8, Fa0/9, Fa0/10 <br>
@@ -275,7 +275,8 @@
             </p>
 
             <h1 class="heading"> setting IP <br> SWITCH </h1>
-            <p style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic;">
+            <p
+                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: #f9f9f9; padding: 10px; border-radius: 5px;">
                 Switch#conf t <br>
                 Enter configuration commands, one per line. End with CNTL/Z. <br>
                 Switch(config)# <span style="color: tomato;"> int vlan10</span> <br>
@@ -297,7 +298,8 @@
                 nya, untuk settinggan nya sama ya, yang berbeda hanya no IP nya ikuti Langkah berikut :
             </p>
             <h1 class="heading"> setting DHCP <br> SWITCH </h1>
-            <p style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic;">
+            <p
+                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: #f9f9f9; padding: 10px; border-radius: 5px;">
                 witch(config)# <span style="color: tomato;">ip dhcp pool vlan10</span> <br>
                 Switch(dhcp-config)#default 10.10.10.1 <br>
                 Switch(dhcp-config)#network 10.10.10.0 255.255.255.0 <br>
