--- a/public/about.html
+++ b/public/about.html
@@ -89,12 +89,13 @@
    <section class="about">
 
       <div class="image">
-         <img src="../images/aku2.jpg" alt="">
+         <img src="../images/aku2.jpg" alt="" style="border-radius: 15px;">
       </div>
 
       <div class="content">
          <h3 class="about-title">Sejarah Website</h3>
-         <p>website ini pertama kali di buat pada tahun 2022. Tujuan awal membuat sebuah website adalah untuk bertukar
+         <p>website ini pertama kali di buat pada tanggal 27 januari tahun 2022. Tujuan awal membuat sebuah website
+            adalah untuk bertukar
             pikiran, jadi ilmu yang saya dapatkan akan saya terapkan pada website ini</p>
          <div class="icons-container">
             <div class="icons">
@@ -232,116 +233,6 @@
    </section>
 
    <!-- teachers section ends -->
-
-   <!-- students reviews section starts  -->
-
-   <section class="reviews">
-
-      <h1 class="heading"> Apa kata mereka </h1>
-
-      <div class="swiper reviews-slider">
-
-         <div class="swiper-wrapper">
-
-            <div class="swiper-slide slide">
-               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim animi atque numquam harum libero nemo,
-                  eligendi laboriosam beatae quo iure corrupti, neque rerum possimus non nisi quia! Cumque, tempora sit.
-               </p>
-               <img src="../images/katameraka1.jpg" alt="">
-               <h3>Ir.indra gandhi</h3>
-               <div class="stars">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star-half-alt"></i>
-               </div>
-            </div>
-
-            <div class="swiper-slide slide">
-               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim animi atque numquam harum libero nemo,
-                  eligendi laboriosam beatae quo iure corrupti, neque rerum possimus non nisi quia! Cumque, tempora sit.
-               </p>
-               <img src="../images/kattameraka2.jpg" alt="">
-               <h3>Dr.Dr.Ir.Mora Devent</h3>
-               <div class="stars">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star-half-alt"></i>
-               </div>
-            </div>
-
-            <div class="swiper-slide slide">
-               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim animi atque numquam harum libero nemo,
-                  eligendi laboriosam beatae quo iure corrupti, neque rerum possimus non nisi quia! Cumque, tempora sit.
-               </p>
-               <img src="../images/katatmeraka3.jpg" alt="">
-               <h3>Ir.H.Brian puttra</h3>
-               <div class="stars">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star-half-alt"></i>
-               </div>
-            </div>
-
-            <div class="swiper-slide slide">
-               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim animi atque numquam harum libero nemo,
-                  eligendi laboriosam beatae quo iure corrupti, neque rerum possimus non nisi quia! Cumque, tempora sit.
-               </p>
-               <img src="../images/pic-4.png" alt="">
-               <h3>john deo</h3>
-               <div class="stars">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star-half-alt"></i>
-               </div>
-            </div>
-
-            <div class="swiper-slide slide">
-               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim animi atque numquam harum libero nemo,
-                  eligendi laboriosam beatae quo iure corrupti, neque rerum possimus non nisi quia! Cumque, tempora sit.
-               </p>
-               <img src="../images/pic-5.png" alt="">
-               <h3>john deo</h3>
-               <div class="stars">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star-half-alt"></i>
-               </div>
-            </div>
-
-            <div class="swiper-slide slide">
-               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim animi atque numquam harum libero nemo,
-                  eligendi laboriosam beatae quo iure corrupti, neque rerum possimus non nisi quia! Cumque, tempora sit.
-               </p>
-               <img src="../images/pic-6.png" alt="">
-               <h3>john deo</h3>
-               <div class="stars">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star-half-alt"></i>
-               </div>
-            </div>
-
-         </div>
-
-      </div>
-
-   </section>
-
-   <!-- students reviews section ends -->
-
-
 
 
 
