--- a/public/cisco.html
+++ b/public/cisco.html
@@ -141,7 +141,7 @@
                 <h3>1 SERVER </h3>
                 <h3>1 SWITCH</h3>
                 <h3>3 PC</h3>
-                <a href="../public/3router.h"><button type="button"
+                <a href="../public/1server.html"><button type="button"
                         style="padding: 10px; background-color: #0eb582; color: white; margin-top: 5px;">Buka</button></a>
             </div>
         </div>
