menambahkan sedikit paragraph

--- a/public/contact.html
+++ b/public/contact.html
@@ -127,6 +127,8 @@
             <textarea name="pesan" class="box" placeholder="message" id="" cols="30" rows="10"></textarea>
             <button type="submit" value="send message" class="btn">KIRIM</button>
          </form>
+         <p style="text-align: center; color: red; font-size: 20px;">*Jika sudah pencet kirim, anda sudah mengirimkan
+            pesan dan lalu refresh.*</p>
 
       </div>
 
