menambahkan video pada httml

--- a/public/about.html
+++ b/public/about.html
@@ -94,7 +94,9 @@
 
       <div class="content">
          <h3 class="about-title">Sejarah Website</h3>
-         <p>website ini pertama kali di buat pada tanggal 27 januari tahun 2022. Tujuan awal membuat sebuah website
+         <p>website ini pertama kali di buat/dikembangkan oleh <a
+               href="https://www.instagram.com/ignasiussigit/">Ignasius</a> pada tanggal 27 januari tahun 2022. Tujuan
+            awal saya membuat sebuah website
             adalah untuk bertukar
             pikiran, jadi ilmu yang saya dapatkan akan saya terapkan pada website ini</p>
          <div class="icons-container">
