--- a/public/cisco.html
+++ b/public/cisco.html
@@ -150,6 +150,89 @@
             HARUS SEMANGAT BROO, JANGAN LEMES
         </marquee>
     </section>
+    <!-- switch ke video -->
+
+    <section class="faq">
+
+        <h1 class="heading" style="margin-top: -20px;">frequently asked questions</h1>
+
+        <div class="accordion-container">
+
+            <div class="accordion active">
+                <div class="accordion-heading">
+                    <h3>VIDEO CISCO</h3>
+                    <i class="fas fa-angle-down"></i>
+                </div>
+                <p class="accordion-content">
+                    Jika masih belum paham dengan artikel di atas silahkan pencet link di bawah ini : <br>
+                    <button type="button" style="padding:10px; background-color: #0eb582; border-radius: 5px;"><a
+                            href="../public/videocisco.html" style="color: white;">Lihat video </a></button>
+                </p>
+            </div>
+
+            <div class="accordion">
+                <div class="accordion-heading">
+                    <h3>Apa Karir Terbaik Di Tahun 2022?</h3>
+                    <i class="fas fa-angle-down"></i>
+                </div>
+                <p class="accordion-content">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit consequatur molestias deserunt facere
+                    laborum doloremque fuga, quae aut. Recusandae officia quis temporibus! Magnam mollitia nostrum
+                    voluptatibus deserunt quidem. Natus, quo.
+                </p>
+            </div>
+
+            <div class="accordion">
+                <div class="accordion-heading">
+                    <h3>Berapa Biaya Untuk Pengembangan Web?</h3>
+                    <i class="fas fa-angle-down"></i>
+                </div>
+                <p class="accordion-content">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit consequatur molestias deserunt facere
+                    laborum doloremque fuga, quae aut. Recusandae officia quis temporibus! Magnam mollitia nostrum
+                    voluptatibus deserunt quidem. Natus, quo.
+                </p>
+            </div>
+
+            <div class="accordion">
+                <div class="accordion-heading">
+                    <h3>peralatan apa saja yang digunakan cyber scurity</h3>
+                    <i class="fas fa-angle-down"></i>
+                </div>
+                <p class="accordion-content">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit consequatur molestias deserunt facere
+                    laborum doloremque fuga, quae aut. Recusandae officia quis temporibus! Magnam mollitia nostrum
+                    voluptatibus deserunt quidem. Natus, quo.
+                </p>
+            </div>
+
+            <div class="accordion">
+                <div class="accordion-heading">
+                    <h3>belajar coding mulai dari mana?</h3>
+                    <i class="fas fa-angle-down"></i>
+                </div>
+                <p class="accordion-content">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit consequatur molestias deserunt facere
+                    laborum doloremque fuga, quae aut. Recusandae officia quis temporibus! Magnam mollitia nostrum
+                    voluptatibus deserunt quidem. Natus, quo.
+                </p>
+            </div>
+
+            <div class="accordion">
+                <div class="accordion-heading">
+                    <h3>cara menggunakan WinBox Mikrotik</h3>
+                    <i class="fas fa-angle-down"></i>
+                </div>
+                <p class="accordion-content">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit consequatur molestias deserunt facere
+                    laborum doloremque fuga, quae aut. Recusandae officia quis temporibus! Magnam mollitia nostrum
+                    voluptatibus deserunt quidem. Natus, quo.
+                </p>
+            </div>
+
+        </div>
+
+    </section>
 
     <!-- contact section ends -->
 
