--- a/public/contact.html
+++ b/public/contact.html
@@ -101,7 +101,6 @@
          <div class="icons">
             <i class="fas fa-envelope"></i>
             <h3> email : </h3>
-            <p>sigitignasius@gmail.com</p>
             <p>xlinux634@gmail.com</p>
          </div>
 
@@ -127,7 +126,7 @@
             <textarea name="pesan" class="box" placeholder="message" id="" cols="30" rows="10"></textarea>
             <button type="submit" value="send message" class="btn">KIRIM</button>
          </form>
-         <p style="text-align: center; color: red; font-size: 20px;">*Jika sudah pencet kirim, anda sudah mengirimkan
+         <p style="text-align: center; color: red; font-size: 20px;">*Jika sudah pencet kirim 1x, anda sudah mengirimkan
             pesan dan lalu refresh.*</p>
 
       </div>
@@ -136,91 +135,6 @@
 
    <!-- contact section ends -->
 
-   <!-- faq section starts  -->
-
-   <section class="faq">
-
-      <h1 class="heading">frequently asked questions</h1>
-
-      <div class="accordion-container">
-
-         <div class="accordion active">
-            <div class="accordion-heading">
-               <h3>how to contact for help?</h3>
-               <i class="fas fa-angle-down"></i>
-            </div>
-            <p class="accordion-content">
-               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit consequatur molestias deserunt facere
-               laborum doloremque fuga, quae aut. Recusandae officia quis temporibus! Magnam mollitia nostrum
-               voluptatibus deserunt quidem. Natus, quo.
-            </p>
-         </div>
-
-         <div class="accordion">
-            <div class="accordion-heading">
-               <h3>what is the best career in 2022?</h3>
-               <i class="fas fa-angle-down"></i>
-            </div>
-            <p class="accordion-content">
-               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit consequatur molestias deserunt facere
-               laborum doloremque fuga, quae aut. Recusandae officia quis temporibus! Magnam mollitia nostrum
-               voluptatibus deserunt quidem. Natus, quo.
-            </p>
-         </div>
-
-         <div class="accordion">
-            <div class="accordion-heading">
-               <h3>how much fees for web development?</h3>
-               <i class="fas fa-angle-down"></i>
-            </div>
-            <p class="accordion-content">
-               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit consequatur molestias deserunt facere
-               laborum doloremque fuga, quae aut. Recusandae officia quis temporibus! Magnam mollitia nostrum
-               voluptatibus deserunt quidem. Natus, quo.
-            </p>
-         </div>
-
-         <div class="accordion">
-            <div class="accordion-heading">
-               <h3>can I choose my own tutor?</h3>
-               <i class="fas fa-angle-down"></i>
-            </div>
-            <p class="accordion-content">
-               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit consequatur molestias deserunt facere
-               laborum doloremque fuga, quae aut. Recusandae officia quis temporibus! Magnam mollitia nostrum
-               voluptatibus deserunt quidem. Natus, quo.
-            </p>
-         </div>
-
-         <div class="accordion">
-            <div class="accordion-heading">
-               <h3>what payment methods are availabe?</h3>
-               <i class="fas fa-angle-down"></i>
-            </div>
-            <p class="accordion-content">
-               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit consequatur molestias deserunt facere
-               laborum doloremque fuga, quae aut. Recusandae officia quis temporibus! Magnam mollitia nostrum
-               voluptatibus deserunt quidem. Natus, quo.
-            </p>
-         </div>
-
-         <div class="accordion">
-            <div class="accordion-heading">
-               <h3>can I have free trial for a month?</h3>
-               <i class="fas fa-angle-down"></i>
-            </div>
-            <p class="accordion-content">
-               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit consequatur molestias deserunt facere
-               laborum doloremque fuga, quae aut. Recusandae officia quis temporibus! Magnam mollitia nostrum
-               voluptatibus deserunt quidem. Natus, quo.
-            </p>
-         </div>
-
-      </div>
-
-   </section>
-
-   <!-- faq section ends -->
 
    <!-- logo slider starts  -->
 
