--- a/public/videocisco.html
+++ b/public/videocisco.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>video cisco</title>
 
-    <link rel="icon" href="./images/linux-hero.png">
+    <link rel="icon" href="../images/linux-hero.png">
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
