menambahkan file rumus excel

--- a/home.html
+++ b/home.html
@@ -133,25 +133,27 @@
       <div class="box-container">
 
          <div class="box">
-            <img src="images/cisco1.png" alt="">
-            <h3><a href="./public/blog.html">CisCo Packet Tracer</a></h3>
-            <p>5 modules</p>
+            <a href="./public/blog.html">
+               <img src="images/cisco1.png" alt="">
+               <h3>Cisco packet Tracer</h3>
+               <p>5 modules</p>
+            </a>
          </div>
 
          <div class="box">
-            <img src="images/linux.png" alt="">
+            <img src="images/logolinux.png" alt="">
             <h3>Linux</h3>
             <p>3 modules</p>
          </div>
 
          <div class="box">
-            <img src="images/cyber.png" alt="">
+            <img src="images/cyber4.png" alt="">
             <h3>Cyber Scurity</h3>
             <p>12 modules</p>
          </div>
 
          <div class="box">
-            <img src="images/subject-icon-4.png" alt="">
+            <img src="images/development.png" alt="">
             <h3>development</h3>
             <p>12 modules</p>
          </div>
