--- a/public/blog.html
+++ b/public/blog.html
@@ -92,22 +92,6 @@
 
          <div class="box">
             <div class="image">
-               <img src="../images/course-2-1.jpg" alt="">
-               <h3>development</h3>
-            </div>
-            <div class="content">
-               <h3>choose what's best for you!</h3>
-               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit!</p>
-               <a href="#" class="btn">read more</a>
-               <div class="icons">
-                  <span> <i class="fas fa-user"></i> Ignasius </span>
-                  <span> <i class="fas fa-clock"></i> 6 hours </span>
-               </div>
-            </div>
-         </div>
-
-         <div class="box">
-            <div class="image">
                <img src="../images/cisco_banner.jpg" alt="">
                <h3>CisCo</h3>
             </div>
@@ -125,12 +109,29 @@
 
          <div class="box">
             <div class="image">
+               <img src="../images/course-2-1.jpg" alt="">
+               <h3>development</h3>
+            </div>
+            <div class="content">
+               <h3>choose what's best for you!</h3>
+               <p>akan mempelajari HTML, CSS , JS. dll</p>
+               <a href="#" class="btn">read more</a>
+               <div class="icons">
+                  <span> <i class="fas fa-user"></i> Ignasius </span>
+                  <span> <i class="fas fa-clock"></i> 6 hours </span>
+               </div>
+            </div>
+         </div>
+
+         <div class="box">
+            <div class="image">
                <img src="../images/cyber3.png" alt="">
                <h3>Cyber Scurity</h3>
             </div>
             <div class="content">
                <h3>choose what's best for you!</h3>
-               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit!</p>
+               <p>Keamanan komputer atau keamanan digital merupakan keamanan informasi yang terdapat pada komputer atau
+                  jaringan. Keamanan komputer juga dikenal dengan sebutan cybersecurity atau IT security.</p>
                <a href="#" class="btn">read more</a>
                <div class="icons">
                   <span> <i class="fas fa-user"></i> Ignasius </span>
@@ -141,12 +142,14 @@
 
          <div class="box">
             <div class="image">
-               <img src="../images/linux2.png" style="border: 2px solid lightgreen;" alt="">
+               <img src="../images/linux2.png" style="border: 1px solid #0eb582; border-bottom: none;" alt="">
                <h3>Linux</h3>
             </div>
             <div class="content">
                <h3>choose what's best for you!</h3>
-               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit!</p>
+               <p>Linux adalah sebuah Sistem Operasi berbasis UNIX yang merupakan hasil pengembangan Freeware dan Open
+                  Source. Oleh karena itu, Linux termasuk sistem operasi open source dan pertama kali dikembangkan oleh
+                  Linus Torvalds.</p>
                <a href="#" class="btn">read more</a>
                <div class="icons">
                   <span> <i class="fas fa-user"></i> Ignasius </span>
@@ -157,13 +160,15 @@
 
          <div class="box">
             <div class="image">
-               <img src="../images/course-2-5.jpg" alt="">
-               <h3>science</h3>
+               <img src="../images/MS-Excel.webp" alt="" style="border:1px solid #0eb582; border-bottom: none;">
+               <h3>Excel</h3>
             </div>
             <div class="content">
                <h3>choose what's best for you!</h3>
-               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit!</p>
-               <a href="#" class="btn">read more</a>
+               <p>Microsoft Excel adalah sebuah aplikasi yang digunakan untuk mengolah sebuah data dengan otomatis
+                  melalui berbagai bentuk seperti rumus, perhitungan dasar, pengolahan data, pembuatan tabel, pembuatan
+                  grafik hingga manajemen data.</p>
+               <a href="../public/excel.html" class="btn">read more</a>
                <div class="icons">
                   <span> <i class="fas fa-user"></i> Ignasius </span>
                   <span> <i class="fas fa-clock"></i> 6 hours </span>
