--- a/public/videocisco.html
+++ b/public/videocisco.html
@@ -80,6 +80,11 @@
     <!-- header section ends -->
 
     <!-- video starts -->
+    <div class="area" style="padding: 5px;">
+        <p style="text-align: center; color: white; font-size: 16px; background-color: salmon; ">*jika
+            soundnya menggangu silahkan di Mute :v*</p>
+    </div>
+
     <div class="container1">
 
         <div class="main-video-container">
@@ -100,7 +105,7 @@
             </div>
 
             <div class="list">
-                <video src="images/vid-3.mp4" class="list-video"></video>
+                <video src="../images/3 router.mp4" class="list-video"></video>
                 <h3 class="list-title">konfigurasi 3 router 6 switch 12 pc</h3>
             </div>
 
